--- a/cfg/yolov3-tiny.cfg
+++ b/cfg/yolov3-tiny.cfg
@@ -22,6 +22,7 @@ policy=steps
 steps=400000,450000
 scales=.1,.1
 
+# 0
 [convolutional]
 batch_normalize=1
 filters=16
@@ -30,10 +31,12 @@ stride=1
 pad=1
 activation=leaky
 
+# 1
 [maxpool]
 size=2
 stride=2
 
+# 2
 [convolutional]
 batch_normalize=1
 filters=32
@@ -42,10 +45,12 @@ stride=1
 pad=1
 activation=leaky
 
+# 3
 [maxpool]
 size=2
 stride=2
 
+# 4
 [convolutional]
 batch_normalize=1
 filters=64
@@ -54,10 +59,12 @@ stride=1
 pad=1
 activation=leaky
 
+# 5
 [maxpool]
 size=2
 stride=2
 
+# 6
 [convolutional]
 batch_normalize=1
 filters=128
@@ -65,11 +72,15 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
+# 7
 [maxpool]
 size=2
 stride=2
+real=32 # minimize casts
 
+# 8
 [convolutional]
 batch_normalize=1
 filters=256
@@ -77,11 +88,14 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
+# 9
 [maxpool]
 size=2
 stride=2
 
+# 10
 [convolutional]
 batch_normalize=1
 filters=512
@@ -90,10 +104,12 @@ stride=1
 pad=1
 activation=leaky
 
+# 11
 [maxpool]
 size=2
 stride=1
 
+# 12
 [convolutional]
 batch_normalize=1
 filters=1024
@@ -104,6 +120,7 @@ activation=leaky
 
 ###########
 
+# 13
 [convolutional]
 batch_normalize=1
 filters=256
@@ -111,7 +128,9 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
+# 14
 [convolutional]
 batch_normalize=1
 filters=512
@@ -119,16 +138,19 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32 # minimize casts
 
+# 15
 [convolutional]
 size=1
 stride=1
 pad=1
 filters=255
 activation=linear
+real=32
 
 
-
+# 16
 [yolo]
 mask = 3,4,5
 anchors = 10,14,  23,27,  37,58,  81,82,  135,169,  344,319
@@ -139,9 +161,11 @@ ignore_thresh = .7
 truth_thresh = 1
 random=1
 
+# 17
 [route]
 layers = -4
 
+# 18
 [convolutional]
 batch_normalize=1
 filters=128
@@ -149,13 +173,17 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
+# 19
 [upsample]
 stride=2
 
+# 20
 [route]
 layers = -1, 8
 
+# 21
 [convolutional]
 batch_normalize=1
 filters=256
@@ -164,13 +192,16 @@ stride=1
 pad=1
 activation=leaky
 
+# 22
 [convolutional]
 size=1
 stride=1
 pad=1
 filters=255
 activation=linear
+real=32
 
+# 23
 [yolo]
 mask = 0,1,2
 anchors = 10,14,  23,27,  37,58,  81,82,  135,169,  344,319
