MIX PRECISION working for MAXPOOL layers

--- a/cfg/yolov3-tiny.cfg
+++ b/cfg/yolov3-tiny.cfg
@@ -72,7 +72,7 @@ size=3
 stride=1
 pad=1
 activation=leaky
-real=32
+# real=32
 
 # 7
 [maxpool]
@@ -88,7 +88,7 @@ size=3
 stride=1
 pad=1
 activation=leaky
-real=32
+# real=32
 
 # 9
 [maxpool]
@@ -128,7 +128,7 @@ size=1
 stride=1
 pad=1
 activation=leaky
-real=32
+# real=32
 
 # 14
 [convolutional]
@@ -138,7 +138,7 @@ size=3
 stride=1
 pad=1
 activation=leaky
-real=32 # minimize casts
+# real=32 # minimize casts
 
 # 15
 [convolutional]
@@ -147,7 +147,7 @@ stride=1
 pad=1
 filters=255
 activation=linear
-real=32
+# real=32
 
 
 # 16
@@ -173,7 +173,7 @@ size=1
 stride=1
 pad=1
 activation=leaky
-real=32
+# real=32
 
 # 19
 [upsample]
@@ -199,7 +199,7 @@ stride=1
 pad=1
 filters=255
 activation=linear
-real=32
+# real=32
 
 # 23
 [yolo]
