Keep original yolov3-tiny.cfg

--- a/cfg/yolov3-tiny-mix.cfg
+++ b/cfg/yolov3-tiny-mix.cfg
@@ -72,11 +72,13 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
 # 7
 [maxpool]
 size=2
 stride=2
+real=32 # minimize casts
 
 # 8
 [convolutional]
@@ -86,6 +88,7 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
 # 9
 [maxpool]
@@ -125,6 +128,7 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
 # 14
 [convolutional]
@@ -134,6 +138,7 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32 # minimize casts
 
 # 15
 [convolutional]
@@ -142,6 +147,7 @@ stride=1
 pad=1
 filters=255
 activation=linear
+real=32
 
 
 # 16
@@ -167,6 +173,7 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
 # 19
 [upsample]
@@ -192,6 +199,7 @@ stride=1
 pad=1
 filters=255
 activation=linear
+real=32
 
 # 23
 [yolo]
