Update cfg files

--- a/cfg/yolov3-tiny-mix.cfg
+++ b/cfg/yolov3-tiny-mix.cfg
@@ -30,11 +30,13 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=16
 
 # 1
 [maxpool]
 size=2
 stride=2
+real=16
 
 # 2
 [convolutional]
@@ -44,11 +46,13 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=16
 
 # 3
 [maxpool]
 size=2
 stride=2
+real=16
 
 # 4
 [convolutional]
@@ -74,11 +78,13 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=16
 
 # 7
 [maxpool]
 size=2
 stride=2
+real=16
 
 # 8
 [convolutional]
@@ -88,11 +94,13 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=16
 
 # 9
 [maxpool]
 size=2
 stride=2
+real=16
 
 # 10
 [convolutional]
@@ -102,11 +110,13 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=16
 
 # 11
 [maxpool]
 size=2
 stride=1
+real=16
 
 # 12
 [convolutional]
@@ -116,6 +126,7 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=16
 
 ###########
 
@@ -127,6 +138,7 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=16
 
 # 14
 [convolutional]
@@ -136,6 +148,7 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=16
 
 # 15
 [convolutional]
@@ -144,6 +157,7 @@ stride=1
 pad=1
 filters=255
 activation=linear
+real=16
 
 
 # 16
@@ -156,10 +170,12 @@ jitter=.3
 ignore_thresh = .7
 truth_thresh = 1
 random=1
+real=16
 
 # 17
 [route]
 layers = -4
+real=16
 
 # 18
 [convolutional]
@@ -169,14 +185,17 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=16
 
 # 19
 [upsample]
 stride=2
+real=16
 
 # 20
 [route]
 layers = -1, 8
+real=16
 
 # 21
 [convolutional]
@@ -186,6 +205,7 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=16
 
 # 22
 [convolutional]
@@ -194,6 +214,7 @@ stride=1
 pad=1
 filters=255
 activation=linear
+real=16
 
 # 23
 [yolo]
@@ -205,3 +226,4 @@ jitter=.3
 ignore_thresh = .7
 truth_thresh = 1
 random=1
+real=16
