Small fix in tests

--- a/cfg/yolov3-mix.cfg
+++ b/cfg/yolov3-mix.cfg
@@ -1,8 +1,4 @@
 [net]
-# Testing
-# batch=1
-# subdivisions=1
-# Training
 batch=64
 subdivisions=16
 width=608
@@ -14,7 +10,6 @@ angle=0
 saturation = 1.5
 exposure = 1.5
 hue=.1
-
 learning_rate=0.001
 burn_in=1000
 max_batches = 500200
@@ -22,7 +17,8 @@ policy=steps
 steps=400000,450000
 scales=.1,.1
 
-# 0
+
+# layer 0
 [convolutional]
 batch_normalize=1
 filters=32
@@ -30,10 +26,10 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# Downsample
 
-# 1
+# layer 1
 [convolutional]
 batch_normalize=1
 filters=64
@@ -41,8 +37,10 @@ size=3
 stride=2
 pad=1
 activation=leaky
+real=32
 
-# 2
+
+# layer 2
 [convolutional]
 batch_normalize=1
 filters=32
@@ -50,8 +48,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 3
+
+# layer 3
 [convolutional]
 batch_normalize=1
 filters=64
@@ -59,15 +59,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 4
+
+# layer 4
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# Downsample
 
-# 5
+# layer 5
 [convolutional]
 batch_normalize=1
 filters=128
@@ -75,8 +77,10 @@ size=3
 stride=2
 pad=1
 activation=leaky
+real=32
 
-# 6
+
+# layer 6
 [convolutional]
 batch_normalize=1
 filters=64
@@ -84,8 +88,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 7
+
+# layer 7
 [convolutional]
 batch_normalize=1
 filters=128
@@ -93,13 +99,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 8
+
+# layer 8
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# 9
+
+# layer 9
 [convolutional]
 batch_normalize=1
 filters=64
@@ -107,8 +117,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 10
+
+# layer 10
 [convolutional]
 batch_normalize=1
 filters=128
@@ -116,15 +128,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 11
+
+# layer 11
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# Downsample
 
-# 12
+# layer 12
 [convolutional]
 batch_normalize=1
 filters=256
@@ -132,8 +146,10 @@ size=3
 stride=2
 pad=1
 activation=leaky
+real=32
 
-# 13
+
+# layer 13
 [convolutional]
 batch_normalize=1
 filters=128
@@ -141,8 +157,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 14
+
+# layer 14
 [convolutional]
 batch_normalize=1
 filters=256
@@ -150,13 +168,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 15
+
+# layer 15
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# 16
+
+# layer 16
 [convolutional]
 batch_normalize=1
 filters=128
@@ -164,8 +186,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 17
+
+# layer 17
 [convolutional]
 batch_normalize=1
 filters=256
@@ -173,13 +197,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 18
+
+# layer 18
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# 19
+
+# layer 19
 [convolutional]
 batch_normalize=1
 filters=128
@@ -187,8 +215,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 20
+
+# layer 20
 [convolutional]
 batch_normalize=1
 filters=256
@@ -196,13 +226,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 21
+
+# layer 21
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# 22
+
+# layer 22
 [convolutional]
 batch_normalize=1
 filters=128
@@ -210,8 +244,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 23
+
+# layer 23
 [convolutional]
 batch_normalize=1
 filters=256
@@ -219,14 +255,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 24
+
+# layer 24
 [shortcut]
 from=-3
 activation=linear
+real=32
 
 
-# 25
+# layer 25
 [convolutional]
 batch_normalize=1
 filters=128
@@ -234,8 +273,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 26
+
+# layer 26
 [convolutional]
 batch_normalize=1
 filters=256
@@ -243,13 +284,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 27
+
+# layer 27
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# 28
+
+# layer 28
 [convolutional]
 batch_normalize=1
 filters=128
@@ -257,8 +302,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 29
+
+# layer 29
 [convolutional]
 batch_normalize=1
 filters=256
@@ -266,13 +313,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 30
+
+# layer 30
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# 31
+
+# layer 31
 [convolutional]
 batch_normalize=1
 filters=128
@@ -280,8 +331,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 32
+
+# layer 32
 [convolutional]
 batch_normalize=1
 filters=256
@@ -289,13 +342,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 33
+
+# layer 33
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# 34
+
+# layer 34
 [convolutional]
 batch_normalize=1
 filters=128
@@ -303,8 +360,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 35
+
+# layer 35
 [convolutional]
 batch_normalize=1
 filters=256
@@ -312,15 +371,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 36
+
+# layer 36
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# Downsample
 
-# 37
+# layer 37
 [convolutional]
 batch_normalize=1
 filters=512
@@ -328,8 +389,10 @@ size=3
 stride=2
 pad=1
 activation=leaky
+real=32
 
-# 38
+
+# layer 38
 [convolutional]
 batch_normalize=1
 filters=256
@@ -337,8 +400,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 39
+
+# layer 39
 [convolutional]
 batch_normalize=1
 filters=512
@@ -346,14 +411,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 40
+
+# layer 40
 [shortcut]
 from=-3
 activation=linear
+real=32
 
 
-# 41
+# layer 41
 [convolutional]
 batch_normalize=1
 filters=256
@@ -361,8 +429,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 42
+
+# layer 42
 [convolutional]
 batch_normalize=1
 filters=512
@@ -370,14 +440,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 43
+
+# layer 43
 [shortcut]
 from=-3
 activation=linear
+real=32
 
 
-# 44
+# layer 44
 [convolutional]
 batch_normalize=1
 filters=256
@@ -385,8 +458,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 45
+
+# layer 45
 [convolutional]
 batch_normalize=1
 filters=512
@@ -394,14 +469,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 46
+
+# layer 46
 [shortcut]
 from=-3
 activation=linear
+real=32
 
 
-# 47
+# layer 47
 [convolutional]
 batch_normalize=1
 filters=256
@@ -409,8 +487,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 48
+
+# layer 48
 [convolutional]
 batch_normalize=1
 filters=512
@@ -418,13 +498,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 49
+
+# layer 49
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# 50
+
+# layer 50
 [convolutional]
 batch_normalize=1
 filters=256
@@ -432,8 +516,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 51
+
+# layer 51
 [convolutional]
 batch_normalize=1
 filters=512
@@ -441,14 +527,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 52
+
+# layer 52
 [shortcut]
 from=-3
 activation=linear
+real=32
 
 
-# 53
+# layer 53
 [convolutional]
 batch_normalize=1
 filters=256
@@ -456,8 +545,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 54
+
+# layer 54
 [convolutional]
 batch_normalize=1
 filters=512
@@ -465,14 +556,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 55
+
+# layer 55
 [shortcut]
 from=-3
 activation=linear
+real=32
 
 
-# 56
+# layer 56
 [convolutional]
 batch_normalize=1
 filters=256
@@ -480,8 +574,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 57
+
+# layer 57
 [convolutional]
 batch_normalize=1
 filters=512
@@ -489,13 +585,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 58
+
+# layer 58
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# 59
+
+# layer 59
 [convolutional]
 batch_normalize=1
 filters=256
@@ -503,8 +603,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 60
+
+# layer 60
 [convolutional]
 batch_normalize=1
 filters=512
@@ -512,15 +614,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 61
+
+# layer 61
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# Downsample
 
-# 62
+# layer 62
 [convolutional]
 batch_normalize=1
 filters=1024
@@ -528,8 +632,10 @@ size=3
 stride=2
 pad=1
 activation=leaky
+real=32
 
-# 63
+
+# layer 63
 [convolutional]
 batch_normalize=1
 filters=512
@@ -537,8 +643,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 64
+
+# layer 64
 [convolutional]
 batch_normalize=1
 filters=1024
@@ -546,13 +654,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 65
+
+# layer 65
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# 66
+
+# layer 66
 [convolutional]
 batch_normalize=1
 filters=512
@@ -560,8 +672,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 67
+
+# layer 67
 [convolutional]
 batch_normalize=1
 filters=1024
@@ -569,13 +683,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 68
+
+# layer 68
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# 69
+
+# layer 69
 [convolutional]
 batch_normalize=1
 filters=512
@@ -583,8 +701,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 70
+
+# layer 70
 [convolutional]
 batch_normalize=1
 filters=1024
@@ -592,13 +712,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 71
+
+# layer 71
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-# 72
+
+# layer 72
 [convolutional]
 batch_normalize=1
 filters=512
@@ -606,8 +730,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 73
+
+# layer 73
 [convolutional]
 batch_normalize=1
 filters=1024
@@ -615,15 +741,17 @@ size=3
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 74
+
+# layer 74
 [shortcut]
 from=-3
 activation=linear
+real=32
 
-######################
 
-# 75
+# layer 75
 [convolutional]
 batch_normalize=1
 filters=512
@@ -631,8 +759,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 76
+
+# layer 76
 [convolutional]
 batch_normalize=1
 size=3
@@ -640,8 +770,10 @@ stride=1
 pad=1
 filters=1024
 activation=leaky
+real=32
 
-# 77
+
+# layer 77
 [convolutional]
 batch_normalize=1
 filters=512
@@ -649,8 +781,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 78
+
+# layer 78
 [convolutional]
 batch_normalize=1
 size=3
@@ -658,8 +792,10 @@ stride=1
 pad=1
 filters=1024
 activation=leaky
+real=32
 
-# 79
+
+# layer 79
 [convolutional]
 batch_normalize=1
 filters=512
@@ -667,8 +803,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 80
+
+# layer 80
 [convolutional]
 batch_normalize=1
 size=3
@@ -676,17 +814,20 @@ stride=1
 pad=1
 filters=1024
 activation=leaky
+real=32
 
-# 81
+
+# layer 81
 [convolutional]
 size=1
 stride=1
 pad=1
 filters=255
 activation=linear
+real=32
 
 
-# 82
+# layer 82
 [yolo]
 mask = 6,7,8
 anchors = 10,13,  16,30,  33,23,  30,61,  62,45,  59,119,  116,90,  156,198,  373,326
@@ -696,13 +837,15 @@ jitter=.3
 ignore_thresh = .7
 truth_thresh = 1
 random=1
+real=32
 
 
-# 83
+# layer 83
 [route]
 layers = -4
 
-# 84
+
+# layer 84
 [convolutional]
 batch_normalize=1
 filters=256
@@ -710,18 +853,21 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 85
+
+# layer 85
 [upsample]
 stride=2
+real=32
 
-# 86
+
+# layer 86
 [route]
 layers = -1, 61
 
 
-
-# 87
+# layer 87
 [convolutional]
 batch_normalize=1
 filters=256
@@ -729,8 +875,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 88
+
+# layer 88
 [convolutional]
 batch_normalize=1
 size=3
@@ -738,8 +886,10 @@ stride=1
 pad=1
 filters=512
 activation=leaky
+real=32
 
-# 89
+
+# layer 89
 [convolutional]
 batch_normalize=1
 filters=256
@@ -747,8 +897,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 90
+
+# layer 90
 [convolutional]
 batch_normalize=1
 size=3
@@ -756,8 +908,10 @@ stride=1
 pad=1
 filters=512
 activation=leaky
+real=32
 
-# 91
+
+# layer 91
 [convolutional]
 batch_normalize=1
 filters=256
@@ -765,8 +919,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 92
+
+# layer 92
 [convolutional]
 batch_normalize=1
 size=3
@@ -774,17 +930,20 @@ stride=1
 pad=1
 filters=512
 activation=leaky
+real=32
 
-# 93
+
+# layer 93
 [convolutional]
 size=1
 stride=1
 pad=1
 filters=255
 activation=linear
+real=32
 
 
-# 94
+# layer 94
 [yolo]
 mask = 3,4,5
 anchors = 10,13,  16,30,  33,23,  30,61,  62,45,  59,119,  116,90,  156,198,  373,326
@@ -794,14 +953,15 @@ jitter=.3
 ignore_thresh = .7
 truth_thresh = 1
 random=1
+real=32
 
 
-
-# 95
+# layer 95
 [route]
 layers = -4
 
-# 96
+
+# layer 96
 [convolutional]
 batch_normalize=1
 filters=128
@@ -809,18 +969,21 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 97
+
+# layer 97
 [upsample]
 stride=2
+real=32
 
-# 98
+
+# layer 98
 [route]
 layers = -1, 36
 
 
-
-# 99
+# layer 99
 [convolutional]
 batch_normalize=1
 filters=128
@@ -828,8 +991,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 100
+
+# layer 100
 [convolutional]
 batch_normalize=1
 size=3
@@ -837,8 +1002,10 @@ stride=1
 pad=1
 filters=256
 activation=leaky
+real=32
 
-# 101
+
+# layer 101
 [convolutional]
 batch_normalize=1
 filters=128
@@ -846,8 +1013,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 102
+
+# layer 102
 [convolutional]
 batch_normalize=1
 size=3
@@ -855,8 +1024,10 @@ stride=1
 pad=1
 filters=256
 activation=leaky
+real=32
 
-# 103
+
+# layer 103
 [convolutional]
 batch_normalize=1
 filters=128
@@ -864,8 +1035,10 @@ size=1
 stride=1
 pad=1
 activation=leaky
+real=32
 
-# 104
+
+# layer 104
 [convolutional]
 batch_normalize=1
 size=3
@@ -873,17 +1046,20 @@ stride=1
 pad=1
 filters=256
 activation=leaky
+real=32
 
-# 105
+
+# layer 105
 [convolutional]
 size=1
 stride=1
 pad=1
 filters=255
 activation=linear
+real=32
 
 
-# 106
+# layer 106
 [yolo]
 mask = 0,1,2
 anchors = 10,13,  16,30,  33,23,  30,61,  62,45,  59,119,  116,90,  156,198,  373,326
@@ -893,4 +1069,6 @@ jitter=.3
 ignore_thresh = .7
 truth_thresh = 1
 random=1
+real=32
+
 
